welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:3: error: identifier expected but '(' found.
	while(tab.(casetab) =! value | casetab != tab.(lines)){
                  ^indexOfValue:3: error: identifier expected but '(' found.
	while(tab.(casetab) =! value | casetab != tab.(lines)){
                                                      ^indexOfValue:6: error: identifier expected but '(' found.
	if (casetab <= tab.(lines)){
                           ^