welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,value:Int): Int = {
	var casetab = 0
	while(tab.(casetab) =! value | casetab != tab.(lines)){
		casetab = casetab + 1
	}
	if (casetab <= tab.(lines)){
		return casetab
	}else{
		return -1
	}
}
